--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       rel="stylesheet"
     />
     <!-- LOCAL CSS -->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
   <body>
      <header class="jumbotron">
-         <h1 class="display-3">Work Day Scheduler</h1>
+         <h1 class="display-3 justify-content-center">Work Day Scheduler</h1>
         <p class="lead">A simple calendar app for scheduling your work day</p>
          <p id="currentDay" class="lead"></p>
      </header>
@@ -37,64 +37,64 @@
         <!-- hour row created -->
         <div class="row" id="hour-09">
             <div class="col-1">09:00AM</div>
-            <textarea rows="2"class="col-10"></textarea>
-            <button>💾</button>
+            <textarea rows="2" class="col-10"></textarea>
+            <button class="save-btn">💾</button>
         </div>
 
         <!-- hour row created -->
         <div class="row" id="hour-10">
             <div class="col-1">10:00AM</div>
-            <textarea rows="2"class="col-10"></textarea>
-            <button>💾</button>
+            <textarea rows="2" class="col-10"></textarea>
+            <button class="save-btn">💾</button>
         </div>
 
         <!-- hour row created -->
         <div class="row" id="hour-11">
             <div class="col-1">11:00AM</div>
-            <textarea rows="2"class="col-10"></textarea>
-            <button>💾</button>
+            <textarea rows="2" class="col-10"></textarea>
+            <button class="save-btn">💾</button>
         </div>
 
         <!-- hour row created -->
         <div class="row" id="hour-12">
             <div class="col-1">12:00PM</div>
-            <textarea rows="2"class="col-10"></textarea>
-            <button>💾</button>
+            <textarea rows="2" class="col-10"></textarea>
+            <button class="save-btn">💾</button>
         </div>
 
         <!-- hour row created -->
         <div class="row" id="hour-13">
             <div class="col-1">01:00PM</div>
-            <textarea rows="2"class="col-10"></textarea>
-            <button>💾</button>
+            <textarea rows="2" class="col-10"></textarea>
+            <button class="save-btn">💾</button>
         </div>
 
         <!-- hour row created -->
         <div class="row" id="hour-14">
             <div class="col-1">02:00PM</div>
-            <textarea rows="2"class="col-10"></textarea>
-            <button>💾</button>
+            <textarea rows="2" class="col-10"></textarea>
+            <button class="save-btn">💾</button>
         </div>
 
         <!-- hour row created -->
         <div class="row" id="hour-15">
             <div class="col-1">03:00PM</div>
-            <textarea rows="2"class="col-10"></textarea>
-            <button>💾</button>
+            <textarea rows="2" class="col-10"></textarea>
+            <button class="save-btn">💾</button>
         </div>
 
         <!-- hour row created -->
         <div class="row" id="hour-16">
             <div class="col-1">04:00PM</div>
-            <textarea rows="2"class="col-10"></textarea>
-            <button>💾</button>
+            <textarea rows="2" class="col-10"></textarea>
+            <button class="save-btn">💾</button>
         </div>
 
         <!-- hour row created -->
         <div class="row" id="hour-17">
             <div class="col-1">05:00PM</div>
-            <textarea rows="2"class="col-10"></textarea>
-            <button>💾</button>
+            <textarea rows="2" class="col-10"></textarea>
+            <button class="save-btn">💾</button>
         </div>
 
     </div>
@@ -105,6 +105,6 @@
     <!-- Moment js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <!-- Local Script -->
-    <script src="assets/js/script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
