--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       rel="stylesheet"
     />
     <!-- LOCAL CSS -->
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
   <body>
-     <header class="jumbotron">
+     <header class="jumbotron justify-content-center">
          <h1 class="display-3 justify-content-center">Work Day Scheduler</h1>
         <p class="lead">A simple calendar app for scheduling your work day</p>
          <p id="currentDay" class="lead"></p>
@@ -35,63 +35,63 @@
       <!-- Timeblocks go here -->
 
         <!-- hour row created -->
-        <div class="row" id="hour-09">
+        <div class="row timeblocks" id="hour-09">
             <div class="col-1">09:00AM</div>
             <textarea rows="2" class="col-10"></textarea>
             <button class="save-btn">💾</button>
         </div>
 
         <!-- hour row created -->
-        <div class="row" id="hour-10">
+        <div class="row timeblocks" id="hour-10">
             <div class="col-1">10:00AM</div>
             <textarea rows="2" class="col-10"></textarea>
             <button class="save-btn">💾</button>
         </div>
 
         <!-- hour row created -->
-        <div class="row" id="hour-11">
+        <div class="row timeblocks" id="hour-11">
             <div class="col-1">11:00AM</div>
             <textarea rows="2" class="col-10"></textarea>
             <button class="save-btn">💾</button>
         </div>
 
         <!-- hour row created -->
-        <div class="row" id="hour-12">
+        <div class="row timeblocks" id="hour-12">
             <div class="col-1">12:00PM</div>
             <textarea rows="2" class="col-10"></textarea>
             <button class="save-btn">💾</button>
         </div>
 
         <!-- hour row created -->
-        <div class="row" id="hour-13">
+        <div class="row timeblocks" id="hour-13">
             <div class="col-1">01:00PM</div>
             <textarea rows="2" class="col-10"></textarea>
             <button class="save-btn">💾</button>
         </div>
 
         <!-- hour row created -->
-        <div class="row" id="hour-14">
+        <div class="row timeblocks" id="hour-14">
             <div class="col-1">02:00PM</div>
             <textarea rows="2" class="col-10"></textarea>
             <button class="save-btn">💾</button>
         </div>
 
         <!-- hour row created -->
-        <div class="row" id="hour-15">
+        <div class="row timeblocks" id="hour-15">
             <div class="col-1">03:00PM</div>
             <textarea rows="2" class="col-10"></textarea>
             <button class="save-btn">💾</button>
         </div>
 
         <!-- hour row created -->
-        <div class="row" id="hour-16">
+        <div class="row timeblocks" id="hour-16">
             <div class="col-1">04:00PM</div>
             <textarea rows="2" class="col-10"></textarea>
             <button class="save-btn">💾</button>
         </div>
 
         <!-- hour row created -->
-        <div class="row" id="hour-17">
+        <div class="row timeblocks" id="hour-17">
             <div class="col-1">05:00PM</div>
             <textarea rows="2" class="col-10"></textarea>
             <button class="save-btn">💾</button>
@@ -105,6 +105,6 @@
     <!-- Moment js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <!-- Local Script -->
-    <script src="./script.js"></script>
+    <script src="./assets/scripts.js"></script>
   </body>
 </html>
