updated function colorUpdater

--- a/index.html
+++ b/index.html
@@ -37,63 +37,63 @@
         <!-- hour row created -->
         <div class="row timeblocks" id="hour-09">
             <div class="col-1">09:00AM</div>
-            <textarea rows="2" class="col-10"></textarea>
+            <textarea rows="2" class="col-10 description"></textarea> 
             <button class="save-btn">💾</button>
         </div>
 
         <!-- hour row created -->
         <div class="row timeblocks" id="hour-10">
             <div class="col-1">10:00AM</div>
-            <textarea rows="2" class="col-10"></textarea>
+            <textarea rows="2" class="col-10 description"></textarea>
             <button class="save-btn">💾</button>
         </div>
 
         <!-- hour row created -->
         <div class="row timeblocks" id="hour-11">
             <div class="col-1">11:00AM</div>
-            <textarea rows="2" class="col-10"></textarea>
+            <textarea rows="2" class="col-10 description"></textarea>
             <button class="save-btn">💾</button>
         </div>
 
         <!-- hour row created -->
         <div class="row timeblocks" id="hour-12">
             <div class="col-1">12:00PM</div>
-            <textarea rows="2" class="col-10"></textarea>
+            <textarea rows="2" class="col-10 description"></textarea>
             <button class="save-btn">💾</button>
         </div>
 
         <!-- hour row created -->
         <div class="row timeblocks" id="hour-13">
             <div class="col-1">01:00PM</div>
-            <textarea rows="2" class="col-10"></textarea>
+            <textarea rows="2" class="col-10 description"></textarea>
             <button class="save-btn">💾</button>
         </div>
 
         <!-- hour row created -->
         <div class="row timeblocks" id="hour-14">
             <div class="col-1">02:00PM</div>
-            <textarea rows="2" class="col-10"></textarea>
+            <textarea rows="2" class="col-10 description"></textarea>
             <button class="save-btn">💾</button>
         </div>
 
         <!-- hour row created -->
         <div class="row timeblocks" id="hour-15">
             <div class="col-1">03:00PM</div>
-            <textarea rows="2" class="col-10"></textarea>
+            <textarea rows="2" class="col-10 description"></textarea>
             <button class="save-btn">💾</button>
         </div>
 
         <!-- hour row created -->
         <div class="row timeblocks" id="hour-16">
             <div class="col-1">04:00PM</div>
-            <textarea rows="2" class="col-10"></textarea>
+            <textarea rows="2" class="col-10 description"></textarea>
             <button class="save-btn">💾</button>
         </div>
 
         <!-- hour row created -->
         <div class="row timeblocks" id="hour-17">
             <div class="col-1">05:00PM</div>
-            <textarea rows="2" class="col-10"></textarea>
+            <textarea rows="2" class="col-10 description"></textarea>
             <button class="save-btn">💾</button>
         </div>
 
